Fixed text and button layout on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -960,7 +960,7 @@ strong {
   }
   .bnt {
     height: 2.1rem;
-    width: 3.8rem;
+    width: 4.1rem;
     font-size: 0.85rem;
   }
   .bnt:hover {
